Fix Classroom Width on Small Devices

--- a/src/spa/src/app.scss
+++ b/src/spa/src/app.scss
@@ -251,6 +251,7 @@ section#column-flexed {
   display: flex;
   flex-direction: column;
   flex-grow: 1;
+  width: 100%;
 }
 
 #drift-widget {
